2010-10-12  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] Editing commands should not be executed on non-editable content.
        https://bugs.webkit.org/show_bug.cgi?id=47426

        * fast/events/scroll-after-click-on-tab-index-expected.txt: Added.
        * fast/events/scroll-after-click-on-tab-index.html: Added.
2010-10-12  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Antonio Gomes.

        [Qt] Editing commands should not be executed on non-editable content.
        https://bugs.webkit.org/show_bug.cgi?id=47426

        Remove calls to editor()->command() when we are not in editable content.
        There is no value in doing that, and in some cases, it prevents scrolling.

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::handleKeyboardEvent):

Canonical link: https://commits.webkit.org/60177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69582 268f45cc-cd09-0410-ab3c-d52691b4dbfc